--- a/src/app/equipment/equipment.component.html
+++ b/src/app/equipment/equipment.component.html
@@ -1,7 +1,19 @@
 <h3>Equipment</h3>
 <ul>
-  <li>Habitat dome</li>
-  <li>Drones</li>
-  <li>Food containers</li>
-  <li>Oxygen tanks</li>
+  <li *ngFor="let piece of pileOfEquipment">
+    <span *ngIf="equipmentBeingEdited !== piece; else editEquipmentBlock">
+      <!-- Show piece of equipment -->
+      <span (click)="edit(piece)" class="editable-text">{{piece}}</span>      
+      <button (click)="remove(piece)">remove</button>
+    </span>
+    
+    <ng-template #editEquipmentBlock>
+      <!-- Else, edit the piece of equipment -->
+      <input #newEquipmentName (keyup.enter)="save(newEquipmentName.value, piece)" value="{{ piece }}" />
+      <button (click)="save(newEquipmentName.value, piece)">save</button>
+    </ng-template>
+  </li>
 </ul>
+
+<input #name type="text" (keyup.enter)="add(name.value)" />
+<button (click)="add(name.value)">Add</button>
