--- a/src/app/experiments/experiments.component.html
+++ b/src/app/experiments/experiments.component.html
@@ -1,6 +1,19 @@
 <h3>Experiments</h3>
 <ul>
-  <li>Mars soil sample</li>
-  <li>Plant growth in habitat</li>
-  <li>Human bone density</li>
+  <li *ngFor="let experiment of listOfExperiments">
+    <span *ngIf="experimentBeingEdited !== experiment; else editExperimentBlock">
+      <!-- Show an experiment -->
+      <span (click)="edit(experiment)" class="editable-text">{{experiment}}</span>      
+      <button (click)="remove(experiment)">remove</button>
+    </span>
+    
+    <ng-template #editExperimentBlock>
+      <!-- Else, edit the experiment description -->
+      <input #newExperimentName (keyup.enter)="save(newExperimentName.value)" value="{{ experiment }}" />
+      <button (click)="save(newExperimentName.value)">save</button>
+    </ng-template>
+  </li>
 </ul>
+
+<input #name type="text" (keyup.enter)="add(name.value)" />
+<button (click)="add(name.value)">Add</button>
