--- a/src/app/equipment/equipment.component.html
+++ b/src/app/equipment/equipment.component.html
@@ -2,7 +2,7 @@
     <h3>Equipment</h3>
     <ol>
         <li *ngFor="let item of equipmentItems">
-            <!-- "Add to Cargo Hold" button goes here. -->
+            <button [class.greenButton]="canAddItem(item)" [disabled]="!canAddItem(item)" (click)="addItem(item)">Add to Cargo Hold</button><!-- "Add to Cargo Hold" button goes here. -->
             {{item.name}}, {{item.mass}} kg
         </li>
     </ol>
@@ -10,13 +10,17 @@
 
 <hr>
 
-<div class = "displayBox">
+<div class="displayBox">
     <h3>Cargo Hold: {{cargoHold.length}}/{{maxItems}} Spots Filled</h3>
     <ol>
-        <li *ngFor="let equipment of cargoHold">{{equipment.name}}</li>
+        <li *ngFor="let equipment of cargoHold">
+            {{equipment.name}} test
+        </li>
     </ol>
     <p>Mass in Hold: {{cargoMass}} kg</p>
-    <p>Mass Budget Remaining: {{<!-- Calculate mass remaining here. -->}} kg</p>
+    <p [class.nearMaxMass]="isNearMaxCargo">Mass Budget Remaining: {{
+        <!-- Calculate mass remaining here. -->}} kg
+    </p>
     <!-- Add the "Empty Hold" button here. -->
+    <button (click)="emptyCargoHold()">Empty Hold</button>
 </div>
-
